force-app/main/default/objects/Donor_Payment__e/Donor_Payment__e.object-meta.xml
<CustomObject>
    <description>Used to issue payments for Donors.</description>
    <label>Donor Payment</label>
    <pluralLabel>Donor Payments</pluralLabel>
</CustomObject>