force-app/main/default/objects/Donor_Payment__e/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Indicates the Campaign Name for this payment request.</description>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>