force-app/main/default/objects/Donor_Payment__e/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <description>Indicates the Donor who will be paid.</description>
    <label>Donor Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>