force-app/main/default/objects/Donor_Payment__e/fields/Payment_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Id__c</fullName>
    <description>If applicable, the payment request that triggered the donor payment event.</description>
    <label>Payment Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>