force-app/main/default/objects/Donor_Payment__e/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Indicates why the payment was given, for use on Transaction Line Item records.</description>
    <label>Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>