force-app/main/default/objects/Donor_Payment__e/fields/Visit_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Id__c</fullName>
    <description>If applicable, the related Visit Id to process this payment.</description>
    <label>Visit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>